--- a/src/form/Login.css
+++ b/src/form/Login.css
@@ -5,11 +5,11 @@ body{
 .container{
     background-color: #f2f2f2;
     justify-content: center;
-    width: 35%;
+    width: 10%;
     margin-left: 26%;
-    margin-top: 5%;
+    margin-top: 55%;
     text-align: center;
-    height: 100%;
+    height: 80%;
     align-items: center;
 }
 
@@ -18,8 +18,8 @@ input[type=text]{
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    /* border: 1px solid #ccc;
+    border-radius: 4px; */
     box-sizing: border-box;
     height: 15%;
 }
@@ -29,8 +29,8 @@ input[type=password]{
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    /* border: 1px solid #ccc;
+    border-radius: 4px; */
     box-sizing: border-box;
     height: 15%;
 }
@@ -43,8 +43,8 @@ button{
     padding: 14px 20px;
     margin: 8px 0;
     margin-left: 55px;
-    border: none;
-    border-radius: 4px;
+    /* border: none;
+    border-radius: 4px; */
     cursor: pointer;
 }
 
@@ -62,6 +62,7 @@ button:hover{
 
 .btn{
     background-color:#45a049; 
+    color: #45a049;
     justify-content: center;
     align-items: center;
 }
@@ -76,8 +77,8 @@ button:hover{
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    /* border: 1px solid #ccc;
+    border-radius: 4px; */
     box-sizing: border-box;
     height: 15%;
     margin-top: 25px;
